noverify flag caused an issue (#1892)